# GOL

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.h  board2.h  farm_fastflow.cpp  fastflow.cpp  game_conf.h  game_logic.h  omp.cpp  omp2.cpp  openmp.cpp  perf.txt  perf_test.txt  pthread.cpp  sequential.cpp  sequential2.cpp  tester.cpp  threads.cpp
old/: old_board.h  old_game_conf.h  old_game_logic.h  old_openmp.cpp  old_pthread.cpp  old_sequential.cpp  old_threads.cpp
